<resources>
    <string name="app_name">TodoApp</string>
    <string name="db">/TodoAppDb.db</string>
    <string name="saveItem">Save item</string>
    <string name="DBInitMssg">DB Init Successful</string>
    <string name="delete_all_done">Delete all done</string>
    <string name="add">Add</string>
    <string name="add_new_item">Add new item...</string>
    <string name="title_activity_edit_delete">EditDelete</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="task_text">Task text ...</string>
    <string name="date_created_label">Date Created: </string>
    <string name="date_modified_label">Date Modified: </string>
    <string name="status_label">Status: </string>
    <string name="tStatusButtonPending">Set pending</string>
    <string name="taskStatusTVTextDone">Done</string>
    <string name="taskStatusTVTextPending">Pending</string>
    <string name="tStatusButtonDone">Set done</string>
    <string name="deleteSingleItemDialogTitle">Delete item ?</string>
    <string name="deleteSingleItemDialogMessage">Are you sure you want to delete this item ?</string>
    <string name="deleteAllDoneItemsDialogTitle">Delete all done</string>
    <string name="deleteAllDoneItemsDialogMessage">Are you sure you want to delete all items with done status ?</string>
</resources>